--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,13 +1,11 @@
 @tailwind base;
-@tailwind components;
+@tailwind wmponents;
 @tailwind utilities;
-
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
 }
-
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
@@ -41,5 +39,5 @@ body {
 }
 
 .carousel .control-dots{
-  bottom: -1rem !important;
+  bottom: -0.96rem !important;
 }
