--- a/public/css/custom-style.css
+++ b/public/css/custom-style.css
@@ -267,6 +267,8 @@ i.box-circle-solid{
 	-moz-transition: 0.2s ease-in;
 }
 .top-nav .navbar-nav li .nav-link {
+	position: relative;
+	z-index: 9999;
     color: #fff;
     font-size: 18px;
     padding:6px 26px;
@@ -1058,12 +1060,10 @@ ul.social-box li {
 		left: 0rem;
 		background: rgba(0, 0, 0, 0.5) none repeat scroll 0 0 !important;
 		padding: 30px 0;
-		z-index: 2;
 	}
 	#navbarSupportedContent li{
 		text-align: center;
 		position: relative;
-		z-index: 2;
 	}
 	#about .copy-container {
 	    background-color:rgba(255,255,255,0.9);
