--- a/public/css/custom-style.css
+++ b/public/css/custom-style.css
@@ -321,6 +321,7 @@ i.box-circle-solid{
 }
 #services{
 	scroll-margin-top: 120px; /* zmień na wysokość Twojej nawigacji */
+	border-top: 20px solid #93362e;
 	border-bottom: 20px solid #93362e;
 }
 #about{
@@ -348,7 +349,6 @@ i.box-circle-solid{
 	bottom: 0;
 	width: 100%;
 	height: 88%;
-	border-bottom: 20px solid #93362e;
 }
 .first-banner-part{
 	width: 30%;
@@ -430,7 +430,7 @@ i.box-circle-solid{
 	align-items:center;
 	height:95%;
 	position: relative;
-	z-index: 0;
+	z-index: 1;
 }
 .intro.intro-small{
 	height: 60%;
@@ -1209,6 +1209,27 @@ ul.social-box li {
 }
 
 @media screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
+	#navbarSupportedContent {
+		position: absolute;
+		width: 100%;
+		margin-top: 29rem;
+		left: 0rem;
+		background: rgba(0, 0, 0, 0.5) none repeat scroll 0 0 !important;
+		padding: 30px 0;
+	}
+	.navbar-expand-md .navbar-nav{
+		flex-direction: column !important;
+		width: 100%;
+	}
+	.nav-item{
+		width: 100%;
+	}
+	.top-nav.light-header .navbar-brand{
+		display: none;
+	}
+	.top-nav .navbar-nav li .nav-link{
+		width: 100%;
+	}
 	section.copy-content-sec{
 		height: 760px !important;
 		padding-top: 0px;
