--- a/public/css/custom-style.css
+++ b/public/css/custom-style.css
@@ -8,6 +8,7 @@ body, html{
 	height: 100%;
 	width:100%;
 	scroll-behavior: smooth;
+	background-color: #000;
 }
 body{
 	font-size: 1rem;
@@ -313,14 +314,16 @@ i.box-circle-solid{
 	border:1px solid #93362e;
 	padding: 6px 15px;
 }
+#home{
+	border-bottom: 20px solid #93362e;
+}
 #services{
 	scroll-margin-top: 120px; /* zmień na wysokość Twojej nawigacji */
-	border-top: 20px solid #93362e;
-	border-bottom: 20px solid #93362e;
 }
 #about{
 	scroll-margin-top: 140px; /* zmień na wysokość Twojej nawigacji */
 	background-color: #f8f2ef;
+	border-top: 20px solid #93362e;
 }
 #testimonial{
 	scroll-margin-top: 120px; /* zmień na wysokość Twojej nawigacji */
@@ -363,7 +366,7 @@ i.box-circle-solid{
 }
 #price-image{
 	position: absolute;
-	top: 12rem;
+	top: 11rem;
 	left: 34rem;
 }
 #price-image2{
@@ -391,6 +394,10 @@ i.box-circle-solid{
 	width: 70%;
 	height: 100%;
 	background-color: white;
+}
+.second-banner-part div{
+	width: 100%;
+	height: 100%;
 }
 .top-nav.light-header{
 	height: 140px;
@@ -422,7 +429,7 @@ i.box-circle-solid{
 	width:100%;
 	display: flex;
 	align-items:center;
-	height:95%;
+	height:100%;
 	position: relative;
 	z-index: 1;
 }
@@ -962,7 +969,11 @@ ul.social-box li {
 #mobile-phone{
 	display: none;
 }
-@media (max-width: 1800px) {
+#image{
+	width: 100%;
+	height: 100%;
+}
+@media screen and (min-width: 1367px) and (max-width: 1800px) {
 	#price-image{
 		left: 25rem !important;
 	}
@@ -1157,24 +1168,61 @@ ul.social-box li {
 	}
 }
 
+/*iPad Pro landscape*/
 @media screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (orientation: landscape) {
-	#price-image{
+	img#price-image{
 		left: 22rem;
 	}
+	.home-container{
+		height: 94%;
+	}
+	#about{
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+	#mobile-phone{
+		display: flex;
+	}
+	#mobile-tablet{
+		display: none;
+	}
+	#computer{
+		display: none;
+	}
 }
-
-@media screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
-	#price-image{
+/*iPad Pro portrait*/
+@media screen and (min-device-width: 1000px) and (max-device-width: 1024px) and (orientation: portrait) {
+	div img#price-image{
 		left: 12rem;
+	}
+	body section.copy-content-sec{
+		height: 660px !important;
 	}
 	.list-group-item{
 		font-size: 14px;
 	}
-	#home{
-		margin-top: -0.5rem;
+	.home-container{
+		height: 91%;
+	}
+	#about .container{
+		margin-top: 4.5rem;
+	}
+	div.margin-right-img{
+		display: flex !important;
+	}	
+	#mobile-phone{
+		display: none;
+	}
+	#mobile-tablet{
+		display: flex;
+	}
+	#computer{
+		display: none;
 	}
 }
 
+/*iPad landscape*/
 @media screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
 	#price-image{
 		left: 14rem;
@@ -1183,7 +1231,7 @@ ul.social-box li {
 		font-size: 14px;
 	}
 	#home{
-		margin-top: 3rem;
+		margin-top: 1.5rem;
 		scroll-margin-top: 100px;
 	}
 	#mobile-phone{
@@ -1197,6 +1245,7 @@ ul.social-box li {
 	}
 }
 
+/*iPad portait*/
 @media screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
 	#navbarSupportedContent {
 		position: absolute;
@@ -1250,7 +1299,7 @@ ul.social-box li {
 		align-items: center;
 	}
 	.margin-right-img{
-		display: none;
+		display: none !important;
 	}
 	.navbar-expand-md .navbar-toggler{
 		display: block;
