--- a/public/css/custom-style.css
+++ b/public/css/custom-style.css
@@ -23,6 +23,10 @@ h1,h2,h3,h4,h5{
 h6{
 	position: relative;
 }
+.flex-container{
+ 	display: flex;
+	flex-flow: column nowrap;
+}
 .bg-primary{
 	background-color: #93362e !important;
 }
@@ -1026,6 +1030,9 @@ ul.social-box li {
 }
 
 @media (max-width: 767px){
+	.fixed-top{
+		position: relative;
+	  }
 	.first-part-position{
 		padding-top: 1.5rem;
 		padding-bottom: 1.5rem;
@@ -1167,7 +1174,7 @@ ul.social-box li {
 		top: 0;
 	}
 	#home{
-		margin-top: 15.5rem;
+		margin-top: 105px;
 	}
 	.home-container{
 		height: auto;
