--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -55,6 +55,10 @@ header{
   height: 100%;
 }
 
+.w-120{
+  width: 120%;
+}
+
 .tb_mc_authorname, .tb_mc_username, .tb_mc_time{
   color: #fff !important;
 }
@@ -1217,7 +1221,7 @@ li > p{
   }
 
   h1{
-    font-size: 44px !important;
+    font-size: 38px !important;
   }
 
   h2{
@@ -1415,7 +1419,7 @@ li > p{
   }
 
   .barber-font{
-    font-size: 26px;
+    font-size: 24px;
   }
 
   .barber-image{
