--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -112,6 +112,7 @@ h1{
 @keyframes typing {
   0% { width: 0; } /* Zaczyna od 0 */
   53.6% { width: 53.6%; } /* Kończy na 100% */
+  100% { width: 53.6%; }
 }
 
 h2{
