--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1118,6 +1118,10 @@ li > p{
   color: var(--barber-brown);
 }
 
+.subpage #services .box{
+  border-radius: 0 25px 25px 0;
+}
+
 #background-image{
   background-image: url(/image/background-1.webp);
   background-size: cover;
